feat: Add thumbnail support for trip plans, including URL field and event handlers